--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/kindasimple">View On GitHub</a></li>
+          <li class="downloads"><a href="/MajorSystem">Recollection</a></li>
+          <li class="title">Apps</li>
         </nav>
       </div><!-- end header -->
 
@@ -35,32 +37,22 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Here are some apps.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>I have been creating some tools to help me be better handle some productivity challenges. I have used the Major System to help remeber long numbers. I am working on creating and prioritizing todo lists.&nbsp; Eventually, I would like an integrated app that applies the pomodoro technique to help stay on track and measure effectiveness.&nbsp; </p>
 
-<pre><code>$ cd your_repo_root/repo_name
+<!--<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-</code></pre>
+</code></pre>-->
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3>What do I do?</h3>
 
-<h3>Designer Templates</h3>
+<p>I write mobile applications and web services on Microsoft platforms, specifically Windows Phone and Windows 8.&nbsp; I try to forego the revolutionary and to consistently land on the useful.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>Contact</h3>
 
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Perhaps you have some ideas or feedback? Reach me at twitter @kindasimple!</p>
       </section>
 
     </div>
