added stackoverflow profile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h1>KindaSimple Code</h1>
           <p>So easy even a monkey could do it</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/kindasimple">kindasimple</a></span>
+          <span class="credits left"><a href="https://github.com/kindasimple">kindasimple</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
@@ -53,6 +53,10 @@ $ git checkout gh-pages
 <h3>Contact</h3>
 
 <p>Perhaps you have some ideas or feedback? Reach me at twitter @kindasimple!</p>
+
+        <a href="http://stackoverflow.com/users/491506/kindasimple" style="float:right;">
+            <img src="http://stackoverflow.com/users/flair/491506.png" width="208" height="58" alt="profile for kindasimple at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for kindasimple at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+        </a>
       </section>
 
     </div>
