--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $ git checkout gh-pages
 
 <h3>What do I do?</h3>
 
-<p>I write mobile applications and web services on Microsoft platforms, specifically Windows Phone and Windows 8.&nbsp; I try to forego the revolutionary and to consistently land on the useful. Ii also have a <a href="http://kindasimple.com/dev">blog</a>.</p>
+<p>I write mobile applications and web services on Microsoft platforms, specifically Windows Phone and Windows 8.&nbsp; I try to forego the revolutionary and to consistently land on the useful. I also have a <a href="http://kindasimple.com/dev">blog</a>.</p>
 
 <h3>Contact</h3>
 
