--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <nav>
           <li class="fork"><a href="https://github.com/kindasimple">View On GitHub</a></li>
           <li class="downloads"><a href="/MajorSystem">Recollection</a></li>
+          <li class="downloads"><a href="/PGHTechFest">PGHTechFest</a></li>
           <li class="title">Apps</li>
         </nav>
       </div><!-- end header -->
@@ -39,7 +40,9 @@
 
         <h3>Here are some apps.</h3>
 
-<p>I have been creating some tools to help me be better handle some productivity challenges. I have used the Major System to help remeber long numbers. I am working on creating and prioritizing todo lists.&nbsp; Eventually, I would like an integrated app that applies the pomodoro technique to help stay on track and measure effectiveness.&nbsp; </p>
+<p>I have been creating some tools to help me be better handle some productivity challenges. I have <a href="/MajorSystem">used the Major System</a> to help remeber long numbers. I am working on creating and prioritizing todo lists.&nbsp; Eventually, I would like an integrated app that applies the pomodoro technique to help stay on track and measure effectiveness.&nbsp; </p>
+
+<p>Check out the <a href="/PGHTechFest">Pittsburgh TechFest app</a> for Windows Phone or Windows 8 for a demonstration of code reuse on different Microsoft platforms.  <a href="https://github.com/kindasimple/PGHTechFest">The code</a> is Free!</p>
 
 <!--<pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
