--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ base_url: "./"
         <h3>Blog</h3>
         
         <ul>
-          {% for post in site.posts %}
+          {% for post in site.posts reversed %}
             <li>
               <a href="{{ post.url }}">{{ post.title }}</a>
             </li>
