Update pages and posts to pure blog format. Improve metadata for posts. Change page content to make sense with new site layout.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 ---
 layout: home
-title: Bootstrap
-base_url: "./"
+title: KindaSimple Solutions
 ---
-<main class="bs-masthead" id="content" role="main">
-    <div class="wrapper">
+
+
+
       <section>
         <div id="title">
           <h1>Evan White</h1>
-          <p>Mobile Developer : Windows Phone and Windows 8</p>
-          <hr>
+          <h1 class="content-subhead">Mobile Developer : Windows Phone and Windows 8</h1>
         </div>
         <!--
         <a href="http://stackoverflow.com/users/491506/kindasimple" style="float:right;">
@@ -20,11 +19,6 @@ base_url: "./"
 
         <p>I am a C# developer with experience developing for the Windows Phone and Windows 8 platforms. I'm currently dabbling in node.js </p>
         
-        <h3>Apps</h3>
-        <ul>
-          <li>Pittsburgh TechFest: [<a href="/PGHTechFest">Windows Phone</a>], [<a href="{{ site.pgh_techfest-win8 }}">Windows 8</a>], [<a href="{{ site.pgh_techfest-code }}">Source</a>]</li>
-          <li>Recollection: [<a href="/MajorSystem">Windows Phone</a>], [<a href="{{ site.recollection-win8 }}">Windows 8</a>], [<a href="http://mnemonal.com">Website</a>]</li>
-        </ul>
 
         <h3>Blog</h3>
         
@@ -36,6 +30,3 @@ base_url: "./"
           {% endfor %}
         </ul>
       </section>
-
-    </div>
-    </main>
