Add livereload and finish grunt post

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: KindaSimple Solutions
         <h3>Blog</h3>
         
         <ul>
-          {% for post in site.posts reversed %}
+          {% for post in site.posts %}
             <li>
               <a href="{{ post.url }}">{{ post.title }}</a>
             </li>
